--- a/templates/chartink/view_strategy.html
+++ b/templates/chartink/view_strategy.html
@@ -9,8 +9,8 @@
         <h3 class="font-bold text-lg text-error">Delete Strategy</h3>
         <p class="py-4">Are you sure you want to delete this strategy? This action cannot be undone.</p>
         <div class="modal-action">
-            <button class="btn" id="cancel_strategy_delete">Cancel</button>
-            <button class="btn btn-error" id="confirm_strategy_delete">Delete Strategy</button>
+            <button class="btn-pro btn-pro-ghost" id="cancel_strategy_delete">Cancel</button>
+            <button class="btn-pro btn-pro-sell" id="confirm_strategy_delete">Delete Strategy</button>
         </div>
     </form>
     <form method="dialog" class="modal-backdrop">
