--- a/templates/public_navbar.html
+++ b/templates/public_navbar.html
@@ -1,12 +1,12 @@
 <div class="navbar bg-base-100">
     <!-- Logo -->
     <div class="navbar-start">
-        <label for="main-drawer" class="btn btn-ghost drawer-button lg:hidden">
+        <label for="main-drawer" class="btn-pro btn-pro-ghost drawer-button lg:hidden">
             <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" fill="none" viewBox="0 0 24 24" stroke="currentColor">
                 <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6h16M4 12h8m-8 6h16" />
             </svg>
         </label>
-        <a href="/" class="btn btn-ghost normal-case text-xl gap-2">
+        <a href="/" class="btn-pro btn-pro-ghost normal-case text-xl gap-2">
             <img src="{{ url_for('static', filename='favicon/logo.png') }}" alt="OpenAlgo Logo" class="h-8 w-8">
             <span class="hidden sm:inline">OpenAlgo</span>
         </a>
@@ -25,7 +25,7 @@
     
     <!-- Right side buttons -->
     <div class="navbar-end">
-        <a href="/download" class="btn btn-primary btn-sm mr-2">Download</a>
+        <a href="/download" class="btn-pro btn-pro-primary btn-pro-sm mr-2">Download</a>
         
         <!-- Theme Toggle -->
         <label class="swap swap-rotate btn btn-ghost btn-circle">
